--- a/src/main/resources/templates/frontend/car/car-model.html
+++ b/src/main/resources/templates/frontend/car/car-model.html
@@ -125,7 +125,7 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>	
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
-	<script th:src="@{/vendor/isotope/isotope.pkgd.min.js}"></script>
+	<script th:src="@{/vendors/isotope/isotope.pkgd.min.js}"></script>
 	<script th:src="@{/js/car.js}" src="js/car.js"></script>
 
 </body>
