--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2952,6 +2952,10 @@ input.num-product::-webkit-inner-spin-button {
 .bor18 {
   border-top: 1px solid #e6e6e6;
 }
+.bor18-1 {
+  border-bottom: 1px solid #e6e6e6;
+}
+
 
 /* .bor18:last-child { */
 /*   border-bottom: 1px solid #e6e6e6; */
