--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
           href="vendors/datatables.net-bs4/select.dataTables.min.css">
     <link th:href='@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css}' rel='stylesheet'/>
+    <link rel="stylesheet" th:href="@{/css/stars.css}" href="../../css/stars.css">
     <link rel="icon" type="image/png" th:href="@{/images/favicon.png}"/>
 </head>
 
