修正前端大多數問題 排版

--- a/src/main/resources/templates/backend/hotel/hotelEditForm.html
+++ b/src/main/resources/templates/backend/hotel/hotelEditForm.html
@@ -178,6 +178,12 @@
                                                                class="form-control" onkeypress="return my_key(event)"/>
                                                     </fieldset>
 
+                                                    <fieldset class="form-group">
+                                                        <label>平均價位</label>
+                                                        <input type="text" th:field="*{price}" id="price"
+                                                               class="form-control" onkeypress="return my_key(event)"/>
+                                                    </fieldset>
+
 
                                                     <!-- HTML part -->
                                                     <label>照片</label>
