--- a/src/main/resources/templates/frontend/hotel/hotel-index.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-index.html
@@ -37,23 +37,18 @@
                                 </a>
                             </li>
                             <li class="bor18">
-                                <a th:href="@{/vendor/cars/locations/1}"
+                                <a th:href="@{/vendor/hotels}"
                                    class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
                                     房間列表
                                 </a>
                             </li>
                             <li class="bor18">
-                                <a th:href="@{/vendor/cars/locations/form}"
+                                <a th:href="@{/vendor/newHotel}"
                                    class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
                                     新增飯店
                                 </a>
                             </li>
-                            <li class="bor18">
-                                <a th:href="@{/vendor/cars/options/form}"
-                                   class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-                                    新增房間
-                                </a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
