前台。新增飯店 ok

--- a/src/main/resources/templates/backend/hotel/hotelNewAdd.html
+++ b/src/main/resources/templates/backend/hotel/hotelNewAdd.html
@@ -182,7 +182,7 @@
 
                                                     <!-- HTML part -->
                                                     <label>照片</label>
-                                                    <input type="file" name="imagefiles" id="progressbarTWInput"
+                                                    <input type="file" name="imagefile" id="progressbarTWInput"
                                                            accept="image/gif, image/jpeg, image/png" multiple>
                                                     <div id="preview_progressbarTW_imgs"
                                                          style="width:100%; height: 300px; overflow:scroll;">
