--- a/src/main/resources/templates/frontend/hotel/hotel-EditRoom.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-EditRoom.html
@@ -187,7 +187,7 @@
 
                                 <!-- HTML part -->
                                 <label>照片</label>
-                                <input type="file" name="imageFiles" id="progressbarTWInput"
+                                <input type="file" name="imagefile" id="progressbarTWInput"
                                        accept="image/gif, image/jpeg, image/png" multiple>
                                 <div id="preview_progressbarTW_imgs"
                                      style="width:100%; height: 300px; overflow:scroll;">
