--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -64,20 +64,19 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title font-weight-bold">房間列表</h4>
-                        <h6 class="card-title font-weight-bold">預計放房間</h6>
                         <div class="p-t-20">
                             <table id="data-table" class="display table table-hover w-100" style="text-align: center">
                                 <thead>
                                 <tr>
                                     <th scope="col" class="text-center">#</th>
-                                    <th scope="col" class="text-center">飯店名稱</th>
-                                    <th scope="col" class="text-center">容納人數</th>
-                                    <th scope="col" class="text-center">地址</th>
-                                    <th scope="col" class="text-center">狀態</th>
-                                    <th scope="col" class="text-center">修改</th>
+                                    <th scope="col" class="text-center">房間名稱</th>
+                                    <th scope="col" class="text-center">適合人數</th>
+                                    <th scope="col" class="text-center">評數大小</th>
+                                    <th scope="col" class="text-center">房型</th>
+                                    <th scope="col" class="text-center">價位</th>
+                                    <th scope="col" class="text-center">照片</th>
+                                    <th scope="col" class="text-center">編輯</th>
                                     <th scope="col" class="text-center">刪除</th>
-                                    <th scope="col" class="text-center">新增房間</th>
-                                    <th scope="col" class="text-center">查看房間</th>
                                 </tr>
                                 </thead>
                                 <tbody id="tbody">
@@ -85,16 +84,24 @@
                                     <td th:text="${roomList.id}"></td>
                                     <td th:text="${roomList.roomname}"></td>
                                     <td th:text="${roomList.peopleCount}"></td>
-                                    <td th:text="${roomList.fullAddress}"></td>
-                                    <td th:text="${roomList.status}"></td>
-                                    <td> 修改</td>
-                                    <td> 刪除</td>
+                                    <td th:text="${roomList.hotelArea}"></td>
+
+                                    <td th:text="${roomList.roomtype}"></td>
+                                    <td th:text="${roomList.roomprice}"></td>
+                                    <td>
+                                        <div th:each="image:${roomList.hotelRoomImageList}" class="d-inline-block">
+                                            <img th:src="@{${image.imagePath}}" class="rounded img-com"
+                                                 width="60" height="72" style="display: inline-flex"/>
+                                        </div>
+                                    </td>
+
+
                                     <th>
-                                        <a class="btn1" th:href="@{/addHotelRoom(id=${hotel.id})}">新增房間</a>
+                                        <a class="btn1" th:href="@{/updateRoom(id=${roomList.id})}">編輯房間</a>
 
                                     </th>
                                     <th>
-                                        <a class="btn1" th:href="@{/getHotelRoom(id=${hotel.id})}">查看房間</a>
+                                        <a class="btn1 " th:href="@{/deleteRoom(id=${roomList.id})}" id="deleteAjax">刪除房間</a>
 
                                     </th>
 
@@ -129,42 +136,8 @@
         $('#data-table').DataTable({})
     });
 
-    // 		$('#data-table tbody').on('click', function () {
-    //          var tr = $(this).closest('tr');
-    //          var row = table.row(tr);
-    //          if (row.child.isShown()) {
-    //              // This row is already open - close it
-    //              row.child.hide();
-    //              tr.removeClass('shown');
-    //          }
-    //          else {
-    //              // Open this row
-    //              row.child(format(row.data())).show();
-    //              tr.addClass('shown');
-    //          }
-    //      })
-
-    $(".btn-delete").click(function (e) {
-        e.preventDefault(); // 取消原始動作
-        let id = $(this).val();
-        Swal.fire({
-            icon: 'warning',
-            title: '確定刪除?',
-            text: "確認刪除後將不可復原",
-            showCancelButton: true,
-            confirmButtonColor: '#FF8D29',
-            cancelButtonColor: '#FFCD38',
-            confirmButtonText: '確認',
-            cancelButtonText: '取消',
-            reverseButtons: true
-        }).then((result) => {
-            if (result.isConfirmed) {
-                $(this).parent().submit();
-            }
-        })
-    })
-
 </script>
+
 
 </body>
 
