--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -117,6 +117,33 @@
 				
 				
 				<div class="col-sm-10 col-md-8">
+					<h3 class="font-weight-bold my-4">租車地點</h3>
+<!-- 					<div id="map" style="width:100%; height: 500px;"></div> -->
+					<p class="ml-4">
+						供應商 : 
+						<span class="ml-4" th:text="${option.carLocation.companyName}"></span>
+					</p>
+					<p class="ml-4">
+						門市名稱 : 
+						<span class="ml-4" th:text="${option.carLocation.name}"></span>
+					</p>
+					<p class="ml-4">
+						門市地址 : 
+						<span class="ml-4" th:text="${option.carLocation.county + option.carLocation.district + option.carLocation.address}"></span>
+					</p>
+					<p class="ml-4">
+						門市電話 : 
+						<span class="ml-4" th:text="${option.carLocation.phone}"></span>
+					</p>
+					<p class="ml-4">
+						營業時間 : 
+						<span class="ml-4" th:text="${option.carLocation.openTime +' ~ ' + option.carLocation.closeTime}"></span>
+					</p>
+				</div>
+				
+				
+				
+				<div class="col-sm-10 col-md-7">
 					<!-- 顧客評論list -->
 					<div>
 						<h3 class="font-weight-bold">顧客評價</h3>
@@ -125,9 +152,13 @@
 
 					<!-- Add review -->
 					<div>
+					
+						<form id="insert-loc-form" name="form" action="#" method="post" 
+								  class="form-horizontal needs-validation" enctype="multipart/form-data">
+						<h4 class="font-weight-bold my-3 ml-5">留下你的評論吧!</h4>
 						<input id="itemTb" name="itemTb" type="hidden" value="carRental">
 						<input id="itemId" name="itemId" type="hidden" th:value="${option.id}">
-						<div class="form-group row">
+						<div class="form-group row ml-5">
 							<label class="col-sm-3 col-form-label" for="rating">給予評分</label>
 							<div class="col-sm-9">
 								<fieldset class="starability-basic">
@@ -145,7 +176,7 @@
 								</fieldset>
 							</div>
 						</div>
-						<div class="form-group row">
+						<div class="form-group row ml-5">
 							<div class="col-sm-3">
 								<label class="col-form-label pb-1" for="content">評論內容</label>
 								<div id="content-length" class="text-black-50 small">(0/200)</div>
@@ -155,24 +186,36 @@
 								<div class="invalid-feedback">評論內容上限200字</div>
 							</div>
 						</div>
-						<div class="form-group row mt-5 justify-content-end">
+						<div class="form-group row mt-5 ml-5">
 							<div class="col-sm-3">
 								<label for="images" class="col-form-label pb-1">上傳照片</label>
 								<div id="images-length" class="text-black-50 small">(0/3)</div>
 							</div>
 							<div class="col-sm-9">
-								<div class="custom-file">
-									<input type="file" class="form-control custom-file-input pb-1"	name="imagefiles" id="imagefiles" multiple>
+								<div class="">
+									<input type="file" class="form-control custom-file-input pb-1" style="background-color: white " name="imagefiles" id="imagefiles" multiple>
 									<div class="invalid-feedback">最多選取3張圖片</div>
-									<label class="custom-file-label">選擇檔案</label>
 								</div>
 							</div>
+							<div class="col-sm-3"></div>
+							<div class="col-sm-9">
+								<div class="row img-responsive" id="formFile"></div>
+							</div>
 						</div>
-						<button type="button" id="btn-insert-com">submit</button>
+						<div class="d-flex justify-content-end my-3">
+							<button id="btn-insert-wrong-com" type="button" class="btn btn-light mr-2 justify-content-end mr-4">
+								錯誤輸入
+							</button>
+							<button id="btn-insert-correct-com" type="button" class="btn btn-light mr-2 justify-content-end mr-4">
+								正確輸入
+							</button>
+							<button id="btn-insert-com" type="button"class="btn btn-warning">送出評論</button>
+						</div>
+						</form>
 					</div>
 				</div>
 			
-				<div class="col-sm-10 col-md-8 txt-justify">
+				<div class="col-sm-10 col-md-7 txt-justify">
 					<h3 class="font-weight-bold my-3">服務條款</h3>
 					<div>
 						<h4 class="font-weight-bold my-3">取車必備文件</h4>
@@ -242,10 +285,7 @@
 					</div>
 				</div>
 				
-				<div class="col-sm-10 col-md-8">
-					<h3 class="font-weight-bold my-4">租車地點</h3>
-					<div id="map" style="width:100%; height: 500px;"></div>
-				</div>
+				
 			</div>
 			
 		</div>
@@ -311,33 +351,9 @@
 	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
 	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
 	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
+	<script th:src="@{/js/comment.js}" src="js/comment.js"></script>
 	<script>
-		$('#btn-insert-com').on('click', function() {
-			let itemTb = $('itemTb').val();
-			let comment = {
-							"itemTb": $('#itemTb').val(),
-							"itemId": $('#itemId').val(), 
-							"userId": "admin", 
-							"rating": $('input[type=radio]:checked').val(), 
-							"content": $('#content').val()
-						  }
-			console.log($('input[name=itemTb]').val())
-			$.ajax({
-				type: 'POST',
-				url: '/gotrip/api/comments',
-				dataType: 'json',
-				contentType: 'application/json',
-				data: JSON.stringify(comment),
-				success: function(data) {
-					getComments();
-				},
-				error: function() {
-					console.log('error')
-				}
-			})
-		})
-		
-		
+
 		
 		function getComments() {
 		let itemTb = $(".comments-itemId").attr('value');
@@ -391,6 +407,65 @@
 			});
 		}
 	}
+	
+	
+	
+	
+	
+	
+		$(function() {
+			  $('#btn').on('click',function() {
+			  // 獲取檔案列表
+			  var file = $('#ipt')[0].files
+			   // 判斷是否選擇了檔案
+			  if (file.length <= 0) {
+			   return alert('請上傳檔案')
+			  }
+			  // 建立formdata
+			  var fd = new FormData()
+			   // 向formdata中傳入資料
+			   // fd.append()
+			   // file是一個偽陣列
+			  fd.append('avatar',file[0])
+			   // 用ajax傳送資料
+			  $.ajax({
+			   type: 'post',url: 'http://www.liulongbin.top:3006/api/upload/avatar',// 資料不需要編碼
+			   contentType: false,// 資料物件不需要轉換成鍵值對格式
+			   processData: false,data: fd,beforeSend: function() {
+			   $('#loading').show()
+			   },complete: function() {
+			   $('#loading').hide()
+			   },success: function(res) {
+			   // 判斷是否接收成功
+			   if (res.status !== 200) {
+			    return alert(reg.msg)
+			   }
+			   $('#img').attr('src','http://www.liulongbin.top:3006' + res['url']).css('display','block')
+
+			   },xhr: function xhr() {
+			   var xhr = new XMLHttpRequest()
+			    // 獲取檔案上傳的進度
+			   xhr.upload.onprogress = function(e) {
+			    // e.lengthComputable表示當前的進度是否是可以計算,返回布林值
+			    if (e.lengthComputable) {
+			     // e.loaded表示下載了多少資料,e.total表示資料總量
+			     var percentComplete = Math.ceil((e.loaded / e.total) * 100)
+			     // 讓進度條的寬度變化
+			     $('#progress').css('width',percentComplete)
+			     // 在進度條中顯示百分比
+			     $('#progress').html(percentComplete + 'px')
+			    }
+			    }
+			    // 檔案載入完成
+			   xhr.upload.onload = function() {
+			    $('#progress').removeClass('progress-bar progress-bar-striped').addClass('progress-bar progress-bar-success')
+			   }
+			   return xhr
+			   }
+
+			  })
+
+			  })
 	</script>
 
 </body>
