--- a/src/main/resources/templates/frontend/car/car-model.html
+++ b/src/main/resources/templates/frontend/car/car-model.html
@@ -82,8 +82,8 @@
 									<div class="bor18 bg8">
 										<div class="row">
 											<div class="col-sm-4">
-												<div class="pos-relative hov-img0 card-img-left" style="height: 180px">
-													<img th:src="@{${option.carLocation.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+												<div class="pos-relative hov-img0" style="height:180px">
+													<img th:src="@{${option.carLocation.image}}" class=" mt-3" alt="IMG-CAR">
 												</div>
 											</div>
 											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14 ">
