--- a/src/main/resources/templates/frontend/hotel-hotelList2.html
+++ b/src/main/resources/templates/frontend/hotel-hotelList2.html
@@ -76,7 +76,7 @@
                             </div>
                             <div class="card-body block2-txt flex-w flex-t p-t-14">
                                 <div class="block2-txt-child1 flex-col-l ">
-                                    <a th:href="@{/ticket/detail}"
+                                    <a th:href="@{/tohotelDetail(id=${hotelList.id})}"
                                        class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
                                         <td th:text="${hotelList.hotel_name}"/>
                                     </a>
